# FlexBSO

./: Readme.md
bdev-passthru-compress/: .gitignore  Makefile  Readme.md  run.sh
bdev-passthru-compress/compress/: Makefile-single  compression_local_core.c  compression_local_core.h  compression_local_main.c  measure.sh
bdev-passthru-compress/hello_world/: bdev.json  bdev_external.json  hello_bdev.c
bdev-passthru-compress/passthru/: Makefile  vbdev_passthru.c  vbdev_passthru_rpc.c
doca-compression/: .gitignore  Makefile  Readme.md  compression_local.c  measure.sh  meson.build
raid/: Readme.md  fio-read.conf  fio-write.conf  fio.conf  raid5f-spdk.diff  raid5f.c  raid5f.json
snap-vs-rdma/: bench.sh  fio-multi.sh  fio-single.sh
snap-vs-rdma/setup/: rdma.sh  snap.sh
